opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/env_config"
bug-reports: "https://github.com/janestreet/env_config/issues"
dev-repo: "git+https://github.com/janestreet/env_config.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/env_config/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async_kernel"
  "async_log"
  "async_unix"
  "core"
  "core_unix"
  "ppx_jane"
  "dune"         {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Helper library for retrieving configuration from an environment variable"
description: "
The Env_config library is a helper for retrieving library and program
configuration from an environment variable. Its goal is to make it easy
to override a configuration that is loaded from disk, computed, or embedded
in a library.
"
